--- a/esphome/tiny-button.yaml
+++ b/esphome/tiny-button.yaml
@@ -3,9 +3,9 @@ esphome:
   friendly_name: tiny-button
 
 esp32:
-  board: esp32-s3-devkitc-1
+  board: m5stack-atoms3
   framework:
-    type: esp-idf
+    type: arduino
 
 # Enable logging
 logger:
@@ -29,6 +29,69 @@ wifi:
     password: "uMKkAAWNCylR"
 
 captive_portal:
+
+# Time component (syncs from Home Assistant)
+time:
+  - platform: homeassistant
+    id: ha_time
+
+# SPI bus for display (correct Atom S3 pins)
+spi:
+  clk_pin: GPIO17
+  mosi_pin: GPIO21
+
+# Display configuration (GC9107 128x128)
+display:
+  - platform: st7789v
+    model: CUSTOM
+    height: 128
+    width: 128
+    offset_height: 3
+    offset_width: 1
+    cs_pin: GPIO15
+    dc_pin: GPIO33
+    reset_pin: GPIO34
+    backlight_pin: GPIO16
+    rotation: 0
+    lambda: |-
+      // Clear screen with cornflower blue background
+      it.fill(id(color_cornflower_blue));
+
+      // Get current time
+      auto time = id(ha_time).now();
+
+      if (time.is_valid()) {
+        // Draw time centered on 128x128 screen (24-hour format)
+        it.strftime(64, 45, id(time_font), id(color_white), TextAlign::CENTER, "%H:%M", time);
+        it.strftime(64, 75, id(small_font), id(color_white), TextAlign::CENTER, "%a %b %d", time);
+      } else {
+        // Show "connecting" if time not synced yet
+        it.print(64, 64, id(small_font), id(color_white), TextAlign::CENTER, "Connecting...");
+      }
+
+# Fonts for display
+font:
+  - file: "gfonts://Roboto"
+    id: time_font
+    size: 32
+  - file: "gfonts://Roboto"
+    id: small_font
+    size: 16
+
+# Colors
+color:
+  - id: color_white
+    red: 100%
+    green: 100%
+    blue: 100%
+  - id: color_black
+    red: 0%
+    green: 0%
+    blue: 0%
+  - id: color_cornflower_blue
+    red: 39.2%
+    green: 58.4%
+    blue: 92.9%
 
 binary_sensor:
   - platform: gpio
