--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -20,3 +20,11 @@ input_number:
     unit_of_measurement: minutes
     icon: mdi:timer-outline
     initial: 2
+  laundry_room_motion_delay:
+    name: Laundry Room Motion Delay
+    min: 1
+    max: 60
+    step: 1
+    unit_of_measurement: seconds
+    icon: mdi:timer-outline
+    initial: 5
