--- a/config/automations/dads_bedroom_button.yaml
+++ b/config/automations/dads_bedroom_button.yaml
@@ -14,7 +14,7 @@ actions:
           - choose:
               - conditions:
                   - condition: state
-                    entity_id: light.bedroom_lamp
+                    entity_id: light.bedroom_lights
                     state: 'off'
                 sequence:
                   - action: scene.turn_on
@@ -22,7 +22,7 @@ actions:
                       entity_id: scene.bedroom_lights_on
               - conditions:
                   - condition: state
-                    entity_id: light.bedroom_lamp
+                    entity_id: light.bedroom_lights
                     state: 'on'
                 sequence:
                   - action: scene.turn_on
