--- a/config/scenes/lights_out.yaml
+++ b/config/scenes/lights_out.yaml
@@ -23,14 +23,14 @@ entities:
     supported_color_modes:
       - color_temp
       - xy
-    effect:
-    color_mode:
-    brightness:
-    color_temp_kelvin:
-    color_temp:
-    hs_color:
-    rgb_color:
-    xy_color:
+    effect: null
+    color_mode: null
+    brightness: null
+    color_temp_kelvin: null
+    color_temp: null
+    hs_color: null
+    rgb_color: null
+    xy_color: null
     mode: normal
     dynamics: none
     friendly_name: Island bulb
@@ -52,14 +52,14 @@ entities:
     supported_color_modes:
       - color_temp
       - xy
-    effect:
-    color_mode:
-    brightness:
-    color_temp_kelvin:
-    color_temp:
-    hs_color:
-    rgb_color:
-    xy_color:
+    effect: null
+    color_mode: null
+    brightness: null
+    color_temp_kelvin: null
+    color_temp: null
+    hs_color: null
+    rgb_color: null
+    xy_color: null
     mode: normal
     dynamics: none
     friendly_name: Kitchen strip
@@ -87,14 +87,14 @@ entities:
     supported_color_modes:
       - color_temp
       - xy
-    effect:
-    color_mode:
-    brightness:
-    color_temp_kelvin:
-    color_temp:
-    hs_color:
-    rgb_color:
-    xy_color:
+    effect: null
+    color_mode: null
+    brightness: null
+    color_temp_kelvin: null
+    color_temp: null
+    hs_color: null
+    rgb_color: null
+    xy_color: null
     mode: normal
     dynamics: none
     friendly_name: Sink bulb
@@ -113,34 +113,21 @@ entities:
       - color_temp
       - hs
       - xy
-    color_mode:
-    brightness:
-    color_temp_kelvin:
-    color_temp:
-    hs_color:
-    rgb_color:
-    xy_color:
+    color_mode: null
+    brightness: null
+    color_temp_kelvin: null
+    color_temp: null
+    hs_color: null
+    rgb_color: null
+    xy_color: null
     friendly_name: Living Room Light
     supported_features: 32
     state: 'off'
   light.bedroom_lamp:
-    min_color_temp_kelvin: 2127
-    max_color_temp_kelvin: 6535
-    min_mireds: 153
-    max_mireds: 470
-    supported_color_modes:
-      - color_temp
-      - hs
-      - xy
-    color_mode:
-    brightness:
-    color_temp_kelvin:
-    color_temp:
-    hs_color:
-    rgb_color:
-    xy_color:
-    friendly_name: Bedroom Lamp
-    supported_features: 32
+    state: 'off'
+  light.bedroom_overhead_left:
+    state: 'off'
+  light.bedroom_overhead_right:
     state: 'off'
 icon: mdi:lightbulb-night-outline
 metadata: {}
