--- a/config/automations/bathroom_presence.yaml
+++ b/config/automations/bathroom_presence.yaml
@@ -33,23 +33,16 @@ actions:
           - choose:
               - conditions:
                   - condition: time
-                    after: 07:00:00
-                    before: '22:00:00'
+                    after: input_datetime.daytime_start
+                    before: input_datetime.nighttime_start
                 sequence:
                   - action: scene.turn_on
                     target:
                       entity_id: scene.daytime_potty
-              - conditions:
-                  - condition: or
-                    conditions:
-                      - condition: time
-                        after: '22:00:00'
-                      - condition: time
-                        before: 07:00:00
-                sequence:
-                  - action: scene.turn_on
-                    target:
-                      entity_id: scene.nighttime_potty
+            default:
+              - action: scene.turn_on
+                target:
+                  entity_id: scene.nighttime_potty
       - conditions:
           - condition: trigger
             id: motion_off
