--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
-# Inventory contains sensitive information (IPs, MACs, credentials)
-inventory/*
-!inventory/.keep
 .env
 .envrc
 
 # Config extraction temporary files (downloaded then split)
 config/automations.yaml
 config/scenes.yaml
+
+# MCP server logs
+logs/
 
 # ESPHome
 esphome/secrets.yaml
